final changes :pencil: :fireworks: :bug:

--- a/homework.rmd
+++ b/homework.rmd
@@ -17,11 +17,11 @@ bibliography: bib.bibtex
 biblio-style: authoryear
 link-citations: true
 urlcolor: blue
-abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple livestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if life-style (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could explain similar feeding habits between those two groups.
+abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple lifestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if lifestyle (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could explain similar feeding habits between those two groups.
 ---
 ```{r global_options, include=FALSE}
 # this tells r to fix images on positions were I want them and don't let LaTeX shuffle them around like crazy
-knitr::opts_chunk$set(fig.pos = "H", out.extra = "", fig.align="center")
+knitr::opts_chunk$set(fig.pos = "H", out.extra = "", fig.align="center", out.width = "100%")
 library("tidyverse")
 ```
 
@@ -36,9 +36,9 @@ Neodermata are obligate parasitic flatworms, subsuming three groups of plathelmi
 
 The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the Monogeneans has to be resolved [@park2007].
 
-A special species in our group was the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was detected multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
+A special focus of our study is the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was detected multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
 
-The aim of this study is to add findings to the controversely discussed phylogeny of the neodermata with a special focus on the positioning of the monogeneans. We want to accomplish this by producing genome assemblies for more monogenean species (*D. coeliaca* and *Leptocotyle minor*) and resolve the phylogeny with the addition of openly accessible NCBI data of further neodermata.
+The aim of this study is to add findings to the controversely discussed phylogeny of the neodermata with a focus on the positioning of the monogeneans. We want to accomplish this by producing genome assemblies for more monogenean species (*D. coeliaca* and *Leptocotyle minor*) and resolve the phylogeny with the addition of openly accessible NCBI data of further neodermata.
 
 # Material and Methods
 
@@ -97,7 +97,7 @@ Assembly of contigs and scaffolds was conducted with PLATANUS^[docker://chrishah
 
 BUSCO^[docker://chrishah/busco-docker:v3.1.0] analysis was run on all samples, including our sequenced samples, for gene prediction and to assess the completeness of the assemblies. The Metazoa `metazoa_odb9` lineage dataset was used with mode `genome`, self-training August optimization mode (`--long`), because our given non-model species, and `schistosoma` in the species select flag.
 
-The phylogenetic tree building was achieved with a `snakemake` workflow [@koster2012]. The workflow was generated by Christoph Hahn from the University of Graz and can be accessed via GitHub Repository^[https://github.com/chrishah/AMEB_HPC_Snakemake]. It uses a custom script to extract ortholog genes from BUSCO, sequence aligning with clustalo, post alignment rating and filtering with ALISCORE and ALICUT and uses raxml to identify the best model of protein evolution for each gene and build single gene trees. FASconCAT was used to concatenate all trimmed alignments and create a supermatrix. The tree calculation using all genes in the matrix was done with raxml. Full list of software and usage can be found in table \@ref(tab:software).
+The phylogenetic tree building was achieved with workflow managment system`snakemake` [@koster2012]. The workflow was generated by Christoph Hahn from the University of Graz and can be accessed via GitHub Repository^[https://github.com/chrishah/AMEB_HPC_Snakemake]. It uses a custom script to extract ortholog genes from BUSCO, sequence aligning with clustalo, post alignment rating and filtering with ALISCORE and ALICUT and uses raxml to identify the best model of protein evolution for each gene and build single gene trees. FASconCAT was used to concatenate all trimmed alignments and create a supermatrix. The tree calculation using all genes in the matrix was done with raxml. Full list of software and usage can be found in table \@ref(tab:software).
 
 ```{r software, echo=FALSE}
 t <- read.csv("data/software.csv")
@@ -113,14 +113,14 @@ knitr::kable(
 
 ## Visualization
 
-Graphical representation of the results was performed in R [@r2020] with the packages [@tidyverse2019; @treeio2020; @ggtree2020; @ape2019]. The script for visualization and the text for this script can be found on github^[https://github.com/HannesOberreiter/AMEB2020_dictyocotyle_coeliaca].
+Graphical representation of the results was performed in R [@r2020] using the packages [@tidyverse2019; @treeio2020; @ggtree2020; @ape2019]. The corresponding script for visualization and the raw text for this script can be found on github^[https://github.com/HannesOberreiter/AMEB2020_dictyocotyle_coeliaca].
 
 # Results
 
-We did stop the minION sequencing of *D. coeliaca* early due to the short length of the produced fragments, which did not really exceed Illumina reads, and to save resources for the other groups in the course. The report for the minION sequencing is online and publicly available as PDF on github^[https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf].
+We did stop the minION sequencing of *D. coeliaca* early due to the insuficient length of the produced fragments, which did not really exceed Illumina reads, and to save resources for the other groups in the course. The report for the minION sequencing is online and publicly available as PDF on github^[https://github.com/chrishah/AMEB_2020_practical/blob/master/assembly-long/MinION/sequencing_reports/minion_report_Dceol_010720.pdf].
 The analysis with BUSCO did show a lower completeness for the locally available Illumina assembly of *D. coeliaca* paired with our ONP reads from the practical course. Therefore, we only used the local assembly from Illumina sequences, without the generated ONP reads, for further analysis. The BUSCO analysis for the assembly of *L. minor*, which only included the minION data and was done by another group in the course, did result in 87 BUSCO genes and was included in the further analysis.
 
-```{r genetree, fig.cap="Singel gene phylogenetic trees for genes available for all given taxa.", echo=FALSE, fig.width = 2}
+```{r genetree, fig.cap="Single gene phylogenetic trees for genes available for all given taxa.", echo=FALSE, out.width = "100%"}
 knitr::include_graphics("data/gene_tree.pdf")
 ```
 
@@ -137,20 +137,20 @@ knitr::include_graphics("data/tree.pdf")
 
 The exact reason why our minION reads did not improve the quality of the locally available *D. coeliaca* Illumina assembly could not be identified. One possible reason could be the unintentional fragmentation of the DNA during library preparation, as the DNA assessment after extraction did show long fragments, which should have resulted in long reads, see fig. \@ref(fig:tapestation). The assumed fragmentation led to very short reads with low coverage and did not add any value to the Illumina assembly when using the ONP reads as additional information in scaffolding.
 
-Our resulting tree does not correspond with the classical hypotheses of the major parasitic groups, see figure \@ref(fig:trees), as it shows the group of Monogenea as paraphyletic. This ,however, is in accordance with new molecular based findings [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. Previous studies, which did group Monogenea in a monophylum, did this on the basis of morphological features alone or while using rRNA to infer the evolutionary history [@lockyer2003; boeger1993].
+Our resulting tree does not correspond with the classical hypotheses of the major parasitic groups, see figure \@ref(fig:trees), as it shows the group of Monogenea as paraphyletic. This ,however, is in accordance with new molecular based findings [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. Previous studies, which did group Monogenea in a monophylum, did this on the basis of morphological features alone or while using rRNA to infer the evolutionary history [@lockyer2003; @boeger1993].
 
 (ref:trees-label) Three competing hypotheses of the evolution of Neodermata previously found supported by molecular data. a) [@lockyer2003], b) [@perkins2010], and c) [@littlewood1999; @olson2001; @laumer2014]. Image from practical course worksheet available at [google.doc](https://docs.google.com/document/d/1h2fNYv-hyIJfBnAZd0uEgk6zkS6bFyiQgQISwl4Qfh8).
-```{r trees, fig.cap="(ref:trees-label)", echo=FALSE}
+```{r trees, fig.cap="(ref:trees-label)", echo=FALSE, out.width = "100%"}
 knitr::include_graphics("data/trees.png")
 ```
 
-The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that ectoparasitic lifestyle is the logical plesiomorphic trait for Neodermata. @park2007 came to a similar conclusion that ectoparasitism arose first but they only used one taxa to represent the Monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results indicate the same basal group but with the Polyopisthocotylean and the Trematoda as a monophyletic group. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims. Therefore, the ectoparasitic trait, which is shared by most Monopisthocotyleans and Polyopisthocotyleans, could be homoplastic. Another possible hypothesis is, that the basal trait in the ancestors for Polyopisthocotyleans could have never been lost as previously proposed [@park2007; @perkins2010].
+The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that ectoparasitic lifestyle is the logical plesiomorphic trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the Monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims. Therefore, the ectoparasitic trait, which is shared by most Monopisthocotyleans and Polyopisthocotyleans, could be homoplastic. Another possible hypothesis is, that the basal trait in the ancestors of Polyopisthocotyleans was never lost as previously proposed [@park2007; @perkins2010].
 
-The same can be infered for the evolutionary history of the life-cycle (complex vs. simple). Both Monogenea groups follow mostly a simple life-cycle, whereas the life-cycle of trematodes is more complex, most often involving moluscs as hosts, whereas cestodes parasitise one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could again follow tow distinct events from simple to complex and back to simple or the simple life-cycle in Polyopisthocotyleans could still represent the ancestral trait. 
+The same can be inferred for the evolutionary history of the life cycle (complex vs. simple). The majority of taxa in the Monogeneans possess a simple life cycle, whereas the life cycle of trematodes and cestodes is more complex.  Trematodes almost always infect moluscs in their life cycle, while, Cestodes possess one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could follow two distinct events from simple to complex and back to a simple life cycle, or the simple life cycle in Polyopisthocotyleans could still represent the ancestral trait. 
 
-The evolution of the feeding habit seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be potentially the ancestral plesiomorphic trait but it would also make sense if the ancestor already did feed on blood like most Polyopisthocotyleans, while the more sophisticated haptor design could represent an evolution over time [@park2007]. The split of the Cestoda could have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. It is probably not the ancestral features as Cestoda absorb their nutrients through their surface layer and did loose traits for normal digestion, e.g. guts [@gibson2014], which is more or less a point of no return, at least in the given time frame. The close relationship between Trematodes and Polyopisthocotyleans could make sense as both diets are similar, mostly feeding on blood, and the evolutionary speciation could have happened by different location niches on the host (ecto- and endoparasitic).
+The evolution of the feeding habit seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be the ancestral plesiomorphic trait but it also seems plausible that the ancestor already did feed on blood like most Polyopisthocotyleans, while the more sophisticated haptor design could have evolved later [@park2007]. As Trematodes also mostly feed on blood, diet could explain the connection in our monophyletic group and lead back to a shared ancestor, which probably also showed the same feeding habit. The evolutionary speciation between the Polyopisthocotyleans and the Trematodes might have evolved via adaptation to different niches on host species (ecto- and endoparasitic). The split of the Cestoda might have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. The feeding habit of Cestoda is probably not the ancestral trait as they absorb their nutrients through the surface layer and did loose organs for digestion, e.g. guts [@gibson2014], which probably poses a point of no return, at least in the given time frame. 
 
-Overall, our new proposed tree should give room for new discussion and shows the need for molecular studies on multiple taxa representing one group and the advantages in using a supermatrix of different genes. 
+Overall, our newly proposed phylogeny should give room for new discussion and shows the need for molecular studies involving multiple species of Monogeneans and the advantages in using a supermatrix of different genes. 
 
 # Acknowledgments
 
