--- a/homework.rmd
+++ b/homework.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Evidence for Paraphyletic Phylogeny of Monogenea using modern NGS Data and Multigene Analysis"
 subtitle: 'University of Graz, Institut for Biology, AMEB2020'
-author: "Hannes Oberreiter, Anna Dünser"
+author: "Hannes Oberreiter & Anna Dünser"
 date: "July-August, 2020"
 header-includes:
     - \usepackage{hyperref}
