--- a/homework.rmd
+++ b/homework.rmd
@@ -17,7 +17,7 @@ bibliography: bib.bibtex
 biblio-style: authoryear
 link-citations: true
 urlcolor: blue
-abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This new insight shows that the Monogeans are a polyphyletic group and that the ectoparasitic and simple lifestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if lifestyle (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved two times in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could explain similar feeding habits between those two groups.
+abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This suggests that the monogeneans are a polyphyletic group and that the ectoparasitic and simple lifestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if lifestyle (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved twice in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could be explained by a similar diet between those two groups.
 ---
 ```{r global_options, include=FALSE}
 # this tells r to fix images on positions were I want them and don't let LaTeX shuffle them around like crazy
@@ -25,16 +25,11 @@ knitr::opts_chunk$set(fig.pos = "H", out.extra = "", fig.align="center", out.wid
 library("tidyverse")
 ```
 
-To do: 
-pictures do not align in pdf
-more clarity in the workflow
-N50 values
-
 # Introduction
 
-Neodermata are obligate parasitic flatworms, subsuming three groups of plathelminthes including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most Trematodes and Cestodes are endoparasitic with a complex life cycle, while Monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The Monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two groups: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors with hooks only, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
+Neodermata are obligate parasitic flatworms, subsuming three groups of plathelminthes including the Trematoda (flukes), Cestoda (tapeworms) and the Monogenea [@littlewood1999; @park2007; @gibson2014]. Most trematodes and cestodes are endoparasitic with a complex life cycle, while monogeneans are mainly adjusted to a ectoparasitic lifestyle with a direct life cycle [@gibson2014]. The monogeneans, which mostly parasite aquatic vertebrates, can be further subdivided into two groups: The Polyopisthocotyleans, that possess more complex haptors, with clamps and minuscule hooks, and are comprised mostly of blood-feeders that attach to the gills of their hosts, and the Monopisthocotyleans, which possess more simple haptors with hooks only, and can be found on skin or gills and feed on skin and or mucus [@gibson2014].
 
-The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the Monogeneans has to be resolved [@park2007].
+The evolutionary history of these three groups, as well as the origin of their differing life cycles (complex vs. simple) and the origin of the differing parasitic lifestyles (endo-/ectoparasitism) have been and are extensively debated [@littlewood1999; @olson2001; @lockyer2003; @perkins2010; @laumer2014]. To gain more insight into the evolutionary history of the neodermata the phylogenetic position of the monogeneans has to be resolved [@park2007].
 
 A special focus of our study is the monogenean *Dictyocotyle coeliaca*, which belongs to the subsclass of Monopisthocotyleans. The taxa is quite rare and morphologically specialized [@dawes1948; @dawes1958]. It can be found in the cœlom of its hosts where it was detected multiple times on liver tissue [@dawes1948]. Possible hosts include a variety of deep sea rays, like *Raja radiata* and *R. lintea* [@dawes1948]. *D. coeliaca* belongs to the group of Monopisthocotyleans.
 
@@ -44,7 +39,7 @@ The aim of this study is to add findings to the controversely discussed phylogen
 
 ## DNA extraction and library prep
 
-The specimen of *D. coeliaca* were sampled in Norway from the host species *R. radiata*. The samples were collected fresh and instantly stored in 96% ethanol. DNA extraction was done using the Zymo Research DNA Miniprep Plus Kit. The elution step was conducted twice with an incubation time of 10 minutes and 50 µl each. The concentration was assessed with a Qubit 4 Flourometer using the broad range assay resulting in of 69.6 ng/µl. The TapeStation 2200 (Agilent Technologies) was used to assess the size distribution, using genomic DNA Screen Tapes , see fig. Before the library preparation the extracts were cleaned up with AMPure XP beads. \@ref(fig:tapestation). To reach the recommended concentration of 1µg of high molecular weight DNA two sample specimen (20µl B164-65, 21µl B161-63) were pooled for the library preparation. Library preparation was done using the Nanopore Ligation Sequencing Kit (SQK-LSK109). To enrich sequences with a length of 3kb or longer, we used the long frame buffer following the protocol (Lab Protocol Version `GDE_9063_v109_revT_14Aug2019` which is deposited on a github repository: [AMEB 2020 practical](https://github.com/chrishah/AMEB_2020_practical)).
+The specimen of *D. coeliaca* were sampled in Norway from the host species *R. radiata*. The samples were collected fresh and instantly stored in 96% ethanol. DNA extraction was done using the Zymo Research DNA Miniprep Plus Kit. The elution step was conducted twice with an incubation time of 10 minutes and 50 µl each. The concentration was assessed with a Qubit 4 Flourometer using the broad range assay resulting in of 69.6 ng/µl. The TapeStation 2200 (Agilent Technologies) was used to assess the size distribution, using genomic DNA Screen Tapes, see fig. Before library preparation the extracts were cleaned up with AMPure XP beads. \@ref(fig:tapestation). To reach the recommended concentration of 1µg of high molecular weight DNA of two sample specimen (20µl B164-65, 21µl B161-63) was pooled. Library preparation was done using the Nanopore Ligation Sequencing Kit (SQK-LSK109). To enrich sequences with a length of 3kb or longer, we used the long frame buffer following the protocol (Lab Protocol Version `GDE_9063_v109_revT_14Aug2019` which is deposited on a github repository: [AMEB 2020 practical](https://github.com/chrishah/AMEB_2020_practical)).
 
 The concentration of the prepared library was assessed using a Qubit 4 Flourometer. Quality assessment in library preparation followed the lab manual. The first Qubit measurement for the *D. coeliaca* library did result in 12.4 ng/µl (total 744 ng) and the second in 47.2 ng/µl (total 660.8 ng). For sequencing we used the minION platform of the Oxford Nanopore Technologies (ONT). The loading concentration of DNA in our samples was 566.4 ng. Additionally DNA sequencing for the second monogenean species, *L. minor* was conducted by a second group of the practical course.
 
@@ -56,7 +51,7 @@ knitr::include_graphics("data/tape-station.png")
 
 ## Genomic Data
 
-Phylogenetic tree analysis was conducted with publicly available data from [NCBI Genbank](https://www.ncbi.nlm.nih.gov) and locally available assemblies from the University of Graz. The full list of sources can be found in table \@ref(tab:samples). Some additional outgroup taxa were added, which are not shown in the table. 
+Phylogenetic tree analysis was conducted with publicly available data from [NCBI Genbank](https://www.ncbi.nlm.nih.gov) and locally available assemblies from the University of Graz. The full list of sources can be found in table \@ref(tab:samples). Additional outgroup taxa were added, which are not shown in the table. 
 
 
 ```{r samples, echo=FALSE}
@@ -124,7 +119,7 @@ The analysis with BUSCO did show a lower completeness for the locally available 
 knitr::include_graphics("data/gene_tree.pdf")
 ```
 
-In total 313 BUSCO genes were used in the supermatrix to calculate the phylogenetic tree, of which four could be found in all of the taxa, see fig. \@ref(fig:genetree). None of the calculated single gene trees show the Monogenean as a monophyletic group. The resulting phylogenetic tree using the supermatrix with all 313 BUSCO genes can be seen in fig. \@ref(fig:tree). It shows high bootstrap coverage for all nodes except one internal clade node, but this did not influence the phylogenetic position of the groups in question. 
+In total 313 BUSCO genes were used in the supermatrix to calculate the phylogenetic tree, of which four could be found in all of the taxa, see fig. \@ref(fig:genetree). None of the calculated single gene trees show the Monogenea as a monophyletic group. The resulting phylogenetic tree using the supermatrix with all 313 BUSCO genes can be seen in fig. \@ref(fig:tree). It shows high bootstrap coverage for all nodes except one internal clade node, but this did not influence the phylogenetic position of the groups in question. 
 
 The result for the parasitic groups indicates Monopisthocotylea (Monogenea) as the most basal clade and Cestoda more closely related to the monophyletic group of Trematoda and Polypisthocotylea (Monogenea). 
 
@@ -139,18 +134,18 @@ The exact reason why our minION reads did not improve the quality of the locally
 
 Our resulting tree does not correspond with the classical hypotheses of the major parasitic groups, see figure \@ref(fig:trees), as it shows the group of Monogenea as paraphyletic. This ,however, is in accordance with new molecular based findings [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. Previous studies, which did group Monogenea in a monophylum, did this on the basis of morphological features alone or while using rRNA to infer the evolutionary history [@lockyer2003; @boeger1993].
 
-(ref:trees-label) Three competing hypotheses of the evolution of Neodermata previously found supported by molecular data. a) [@lockyer2003], b) [@perkins2010], and c) [@littlewood1999; @olson2001; @laumer2014]. Image from practical course worksheet available at [google.doc](https://docs.google.com/document/d/1h2fNYv-hyIJfBnAZd0uEgk6zkS6bFyiQgQISwl4Qfh8).
+(ref:trees-label) Three competing hypotheses of the evolution of Neodermata previously found, supported by molecular data. a) [@lockyer2003], b) [@perkins2010], and c) [@littlewood1999; @olson2001; @laumer2014]. Image from practical course worksheet available at [google.doc](https://docs.google.com/document/d/1h2fNYv-hyIJfBnAZd0uEgk6zkS6bFyiQgQISwl4Qfh8).
 ```{r trees, fig.cap="(ref:trees-label)", echo=FALSE, out.width = "100%"}
 knitr::include_graphics("data/trees.png")
 ```
 
-The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that ectoparasitic lifestyle is the logical plesiomorphic trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the Monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims. Therefore, the ectoparasitic trait, which is shared by most Monopisthocotyleans and Polyopisthocotyleans, could be homoplastic. Another possible hypothesis is, that the basal trait in the ancestors of Polyopisthocotyleans was never lost as previously proposed [@park2007; @perkins2010].
+The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that ectoparasitic lifestyle is the logical plesiomorphic trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims in the Polyopisthocotyleans. Another possible hypothesis is, that ectoparasitism poses the basal trait, which has been previously proposed for the Polyopisthocotyleans [@park2007; @perkins2010].
 
-The same can be inferred for the evolutionary history of the life cycle (complex vs. simple). The majority of taxa in the Monogeneans possess a simple life cycle, whereas the life cycle of trematodes and cestodes is more complex.  Trematodes almost always infect moluscs in their life cycle, while, Cestodes possess one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could follow two distinct events from simple to complex and back to a simple life cycle, or the simple life cycle in Polyopisthocotyleans could still represent the ancestral trait. 
+The same can be inferred for the evolutionary history of the life cycle (complex vs. simple). The majority of taxa in the monogeneans possess a simple life cycle, whereas the life cycle of trematodes and cestodes is more complex. Trematodes almost always infect moluscs in their life cycle, while, cestodes possess one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could follow two distinct events from simple to complex and back to a simple life cycle, or the simple life cycle in Polyopisthocotyleans could still represent the ancestral trait inferring the independent evolution of a complex life cycle in the cestodes and trematodes. 
 
-The evolution of the feeding habit seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be the ancestral plesiomorphic trait but it also seems plausible that the ancestor already did feed on blood like most Polyopisthocotyleans, while the more sophisticated haptor design could have evolved later [@park2007]. As Trematodes also mostly feed on blood, diet could explain the connection in our monophyletic group and lead back to a shared ancestor, which probably also showed the same feeding habit. The evolutionary speciation between the Polyopisthocotyleans and the Trematodes might have evolved via adaptation to different niches on host species (ecto- and endoparasitic). The split of the Cestoda might have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. The feeding habit of Cestoda is probably not the ancestral trait as they absorb their nutrients through the surface layer and did loose organs for digestion, e.g. guts [@gibson2014], which probably poses a point of no return, at least in the given time frame. 
+The evolution of the diet seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be the ancestral trait but it also seems plausible that the ancestor already did feed on blood like most Polyopisthocotyleans [@perkins2010]. As trematodes also mostly feed on blood, diet could validate the sister relationship between the Polyopishocotyleans and Trematoda and lead back to a shared ancestor, which probably also showed the same feeding habit. The evolutionary speciation between the Polyopisthocotyleans and the Trematoda might have evolved via adaptation to different niches on host species (ecto- and endoparasitic). The split of the Cestoda might have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. The feeding habit of Cestoda is probably not the ancestral trait as they absorb their nutrients through the surface layer and did loose organs for digestion, e.g. guts [@gibson2014], which probably poses a point of no return, at least in the given time frame. 
 
-Overall, our newly proposed phylogeny should give room for new discussion and shows the need for molecular studies involving multiple species of Monogeneans and the advantages in using a supermatrix of different genes. 
+Overall, our newly proposed phylogeny should give room for new discussion and shows the need for further molecular studies involving multiple species of monogeneans and the advantages in using a supermatrix of different genes. 
 
 # Acknowledgments
 
